[gd_scene load_steps=11 format=2]

[ext_resource path="res://LizardGame/UI/UI-lizard.gd" type="Script" id=1]
[ext_resource path="res://LizardGame/Sprites/UI/HeartIcon.png" type="Texture" id=2]
[ext_resource path="res://LizardGame/Sprites/UI/DashIcon.png" type="Texture" id=3]
[ext_resource path="res://LizardGame/Sprites/UI/AppleIcon.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Schrödinger.tres" type="DynamicFont" id=5]
[ext_resource path="res://Fonts/Schrödinger.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://LizardGame/Sprites/Orb/orbicon.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
resource_name = "FadeIn"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Control/GameOver:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Control/GameOver:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="LZUI" type="CanvasLayer"]
pause_mode = 2
visible = false
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 636.0
margin_bottom = 356.0

[node name="Life" type="TextureRect" parent="Control"]
margin_right = 18.0
margin_bottom = 18.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="Dash" type="TextureRect" parent="Control"]
margin_left = 1.0
margin_top = 23.0
margin_right = 14.0
margin_bottom = 39.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2

[node name="DashReloadTimer" type="Timer" parent="Control"]
wait_time = 1.6
one_shot = true

[node name="Apple" type="TextureRect" parent="Control"]
margin_top = 337.0
margin_right = 12.0
margin_bottom = 347.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
expand = true

[node name="OrbIcon" type="TextureRect" parent="Control"]
visible = false
margin_left = 609.0
margin_top = 332.0
margin_right = 621.0
margin_bottom = 342.0
rect_scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 7 )
expand = true

[node name="AppleAmount" type="Label" parent="Control"]
margin_left = 20.0
margin_top = 338.0
margin_right = 38.0
margin_bottom = 348.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "x0"

[node name="GameTime" type="Label" parent="Control"]
visible = false
margin_left = 547.0
margin_right = 586.0
margin_bottom = 17.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0"

[node name="LevelTime" type="Label" parent="Control"]
visible = false
margin_left = 577.0
margin_top = 27.0
margin_right = 616.0
margin_bottom = 44.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0"

[node name="GlobalScore" type="Label" parent="Control"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = 1.00003
margin_right = 61.0
margin_bottom = 17.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0"

[node name="GScoreLabel" type="Label" parent="Control"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -115.0
margin_right = -39.0
margin_bottom = 17.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Global Score : "

[node name="LScoreLabel" type="Label" parent="Control"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -111.0
margin_top = 338.0
margin_right = -37.0
margin_bottom = 355.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Level Score : "

[node name="LevelScore" type="Label" parent="Control"]
visible = false
margin_left = 318.0
margin_top = 338.0
margin_right = 357.0
margin_bottom = 355.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0"

[node name="Multiplier" type="Label" parent="Control"]
visible = false
margin_left = 577.0
margin_top = 55.0
margin_right = 616.0
margin_bottom = 72.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "0"

[node name="OrbLabel" type="Label" parent="Control"]
visible = false
margin_left = 585.0
margin_top = 338.0
margin_right = 603.0
margin_bottom = 348.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Orb"

[node name="GameOver" type="Label" parent="Control"]
margin_left = 240.0
margin_top = 160.0
margin_right = 399.0
margin_bottom = 190.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 10
custom_constants/shadow_offset_y = 10
custom_fonts/font = SubResource( 1 )
text = "Level 10 Complete"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeIn = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="timeout" from="Control/DashReloadTimer" to="." method="_on_DashReloadTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
